slideshow & banner update
-add slideshow function + css
-change the way how Banner was created by a function with image and texts props

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,15 @@
 .card-container {
     width: 250px;
+    height: 225px;
+    border-radius: 10px;
     position: relative;
+    cursor: pointer;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.card-container:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .card-container img {
