--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,9 @@
 .banner {
+    width: 100%;
+    height: 110px;
+    border-radius: 15px;
     position: relative;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .banner img {
@@ -11,8 +15,8 @@
 
 .banner p {
     position: absolute;
-    white-space:nowrap;
-    color:white;
+    white-space: nowrap;
+    color: white;
     font-weight: 500;
     font-size: 24px;
     top: 50%;
