--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+/* RESET */
+
 *,
 ::before,
 ::after {
@@ -46,6 +48,30 @@ a {
 }
 
 a:hover {
-  text-decoration:underline;
-  color:#FF6060;
+  text-decoration: underline;
+  color: #FF6060;
+}
+
+/* ERROR.JS */
+
+.error-container {
+  justify-content: center;
+}
+
+.error-container nav {
+  text-align: center;
+}
+
+.error-number {
+  text-align: center;
+  color: #FF6060;
+  font-size: 200px;
+  font-weight: 700;
+}
+
+.error-text {
+  text-align: center;
+  color: #FF6060;
+  font-weight: 600;
+  font-size: 18px;
 }
