--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -9,8 +9,9 @@
 .banner img {
     width: 100%;
     height: 110px;
-    object-fit: none;
+    object-fit: cover;
     border-radius: 15px;
+    filter: brightness(65%);
 }
 
 .banner p {
