--- a/src/components/Apartment/apartment.css
+++ b/src/components/Apartment/apartment.css
@@ -9,3 +9,11 @@
     margin-bottom: 25px;
     padding: 3%;
 }
+
+
+@media screen and (max-width: 700px)
+{
+    .cards-gallery {
+        background:none;
+    }
+}
