--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -28,3 +28,17 @@
     bottom: 15px;
     left: 12px;
 }
+
+@media screen and (max-width: 700px)
+{
+    .card-container {
+        width: 100%;
+    }
+    .card-container img {
+        width: 100%;
+    }
+
+    .infos {
+        font-size: 14px;
+    }
+}
