--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,13 @@ header {
 }
 
 nav a {
-    margin-left: 45px;
+    margin-left: 50px;
     color: #FF6060;
+}
+
+@media screen and (max-width: 700px) {
+    nav a {
+        margin-left: 19px;
+        font-variant: small-caps;
+    }
 }
