--- a/src/style.css
+++ b/src/style.css
@@ -75,3 +75,22 @@ a:hover {
   font-weight: 600;
   font-size: 18px;
 }
+
+@media screen and (max-width:700px) {
+
+  .error-number {
+    padding-top: 120px;
+    font-size: 100px;
+    top: 50%;
+    left: 50%;
+  }
+}
+
+.error-container nav {
+  padding-top: 125px;
+  padding-bottom: 150px;
+}
+
+.error-container nav a {
+  font-variant: normal;
+}
