--- a/src/components/ImageSlider/imageSlider.css
+++ b/src/components/ImageSlider/imageSlider.css
@@ -1,22 +1,37 @@
 .slider {
-    height: 100%;
-    position: relative;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  position: relative;
+  height: 255px;
+  width: 100%;
 }
 
-.leftArrow {
-    position: absolute;
-    top:50%;
-    transform: (translate(0, -50%));
-    left: 32px;
-    color: white;
-    cursor: pointer;
+.slider__img {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
-.rightArrow {
-    position: absolute;
-    top:50%;
-    transform: (translate(0, -50%));
-    right: 32px;
-    color: white;
-    cursor: pointer;
+.arrow-right {
+  transform: rotate(-180deg);
+  position: absolute;
+  top: 45%;
+  left: 5px;
+  cursor: pointer;
+}
+
+.arrow-left {
+  transform: rotate(180deg);
+  position: absolute;
+  top: 45%;
+  right: 5px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 750px) {
+  .slider {
+    height: 415px;
+    border-radius: 25px;
+  }
 }
