media queries adjustements and some stuff
-modification of some css files to look like more the figma
-modification of some old names of classes
-delete an old unused file (tag is integred directly in ApartmentInfos

--- a/src/components/ImageSlider/imageSlider.css
+++ b/src/components/ImageSlider/imageSlider.css
@@ -19,6 +19,7 @@
   top: 45%;
   left: 5px;
   cursor: pointer;
+  width: 20px;
 }
 
 .arrow-left {
@@ -27,6 +28,7 @@
   top: 45%;
   right: 5px;
   cursor: pointer;
+  width: 20px;
 }
 
 @media screen and (min-width: 750px) {
