--- a/src/components/ApartmentInfos/apartmentInfos.css
+++ b/src/components/ApartmentInfos/apartmentInfos.css
@@ -6,7 +6,7 @@
 }
 
 .apartment__location {
-  margin-top: 1rem;
+  margin-top: 0.1rem;
   font-size: 14px;
   color: #FF6060;
   font-weight: 500;
@@ -24,11 +24,17 @@
   font-weight: 400;
   font-size: 10px;
   color: white;
-  padding: 0.3rem 0rem;
+  padding: 0px 25px 0px 25px;
   margin-right: 1em;
   margin-top: 1em;
   border-radius: 15px;
   background-color: #FF6060;
+  cursor: pointer;
+}
+
+.apartment-host__rating {
+  padding-top: 25px;
+  
 }
 
 .apartment-host {
@@ -85,8 +91,8 @@
   }
 
   .apartment__tag {
-    font-size: 14px;
-    padding: 0.5rem 2rem;
+    height: 20px;
+    font-size: 12px;
   }
 
   .apartment-host {
@@ -106,4 +112,13 @@
     font-size: 18px;
   }
 
+  .apartment-host__rating {
+    justify-content: flex-end;
+  }
+
+  .slideshow-parent {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
 }
