--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -25,8 +25,16 @@
     transform: translate(-50%, -50%);
 }
 
-@media screen and (max-width: 700px)
+@media screen and (max-width: 750px)
+
 {
+    .banner {
+        width: 100%;
+        height: 190px;
+    }
+    .banner img {
+        height: 190px;
+    }
     .banner p {
         width: 50%;
         top: 50%;
