--- a/src/components/Stars/stars.css
+++ b/src/components/Stars/stars.css
@@ -1,11 +1,19 @@
 .star {
     filter: invert(61%) sepia(65%) saturate(2475%) hue-rotate(320deg) brightness(98%) contrast(105%);
-    width: 25px;
+    width: 30px;
     padding-left: 5px;
 }
 
 .star-solid {
     filter: invert(61%) sepia(65%) saturate(2475%) hue-rotate(320deg) brightness(98%) contrast(105%);
-    width: 25px;
+    width: 30px;
     padding-left: 5px;
+}
+
+@media screen and (max-width: 750px)
+
+{
+    .star, .star-solid {
+        width: 25px;
+    }
 }
