--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,16 @@ body {
 }
 
 body {
+  position: relative;
   margin: 5%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+}
+
+body::after {
+  content: '';
+  display: block;
+  height: 125px;
 }
 
 picture,
@@ -58,9 +65,12 @@ a:hover {
   justify-content: center;
 }
 
-.error-container nav {
+.error-container a {
   text-align: center;
+  padding-top: 125px;
+  padding-bottom: 150px;
 }
+
 
 .error-number {
   text-align: center;
@@ -76,7 +86,16 @@ a:hover {
   font-size: 18px;
 }
 
-@media screen and (max-width:700px) {
+.back-home-link {
+  display: flex;
+  justify-content: center;
+}
+
+.back-home-link a {
+  color: #FF6060;
+}
+
+@media screen and (max-width:750px) {
 
   .error-number {
     padding-top: 120px;
@@ -84,13 +103,8 @@ a:hover {
     top: 50%;
     left: 50%;
   }
-}
 
-.error-container nav {
-  padding-top: 125px;
-  padding-bottom: 150px;
-}
-
-.error-container nav a {
-  font-variant: normal;
+  .error-container nav a {
+    font-variant: normal;
+  }
 }
