image slider update
add a dynamic counter of the images

--- a/src/components/ImageSlider/imageSlider.css
+++ b/src/components/ImageSlider/imageSlider.css
@@ -31,6 +31,13 @@
   width: 20px;
 }
 
+.count {
+  color: white;
+  position: absolute;
+  right: 50%;
+  top: 90%
+}
+
 @media screen and (min-width: 750px) {
   .slider {
     height: 415px;
